--- a/index.html
+++ b/index.html
@@ -1,105 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting Timer</title>
-    <style>
-        .red {
-            color: red;
-        }
-        .green {
-            color: green;
-        }
-        .current {
-            font-weight: bold;
-        }
-        button {
-            margin-left: 10px;
-        }
-        .topic, .subtopic {
-            margin-bottom: 10px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pokémon Type Battle Simulation</title>
+<style>
+  body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; margin-top: 20px; }
+  canvas { border: 1px solid black; cursor: pointer; }
+  label, button, input { margin: 5px; }
+</style>
 </head>
 <body>
-    <div id="totalTime">TOTAL MEETING TIME: 0:00:00</div>
-    <div id="remainingTime">REMAINING MEETING TIME: 0:00:00</div>
-    <div id="topics">
-        <div class="topic" data-time="600">
-            <div class="title">Topic 1: 10 MIN</div>
-            <div class="subtopic" data-time="420">
-                <span>Sub topic a: 7 min</span>
-                <button onclick="endTopic(this)">End Topic</button>
-            </div>
-            <div class="subtopic" data-time="180">
-                <span>Sub topic b: 3 min</span>
-                <button onclick="endTopic(this)">End Topic</button>
-            </div>
-        </div>
-        <div class="topic" data-time="300">
-            <div class="title">Topic 2: 5 MIN</div>
-            <button onclick="endTopic(this)">End Topic</button>
-        </div>
-    </div>
-    <script>
-        let totalMeetingTime = 900; // 15 minutes in seconds
-        let startTime = Date.now();
-        let elapsedTime = 0;
-        let currentTopic = null;
+<canvas id="battleCanvas"></canvas>
+<label for="speedControl">Animation Speed: <span id="speedValue">500</span>ms</label>
+<input type="range" id="speedControl" min="1" max="1000" value="500">
+<button id="startButton">Start</button>
+<button id="stopButton">Stop</button>
+<script>
+const canvas = document.getElementById('battleCanvas');
+const ctx = canvas.getContext('2d');
+const types = ['normal', 'fire', 'water', 'grass', 'electric', 'ice', 'fighting', 'poison', 'ground',
+               'flying', 'psychic', 'bug', 'rock', 'ghost', 'dragon', 'dark', 'steel'];
+const typeColors = {
+  normal: '#A8A878', fire: '#F08030', water: '#6890F0', grass: '#78C850', electric: '#F8D030',
+  ice: '#98D8D8', fighting: '#C03028', poison: '#A040A0', ground: '#E0C068',
+  flying: '#A890F0', psychic: '#F85888', bug: '#A8B820', rock: '#B8A038', ghost: '#705898',
+  dragon: '#7038F8', dark: '#705848', steel: '#B8B8D0'
+};
+let grid = [];
+let animationFrameId;
+let animationSpeed = 500; // in milliseconds
+const gridWidth = 100; // width in cells
+const gridHeight = 100; // height in cells
+const cellSize = 10; // cell size in pixels
 
-        function formatTime(time) {
-            let minutes = Math.floor(time / 60);
-            let seconds = time % 60;
-            return `${minutes}:${seconds.toString().padStart(2, '0')}`;
+function initializeGrid() {
+  grid = Array.from({length: gridHeight}, () =>
+    Array.from({length: gridWidth}, () => types[Math.floor(Math.random() * types.length)])
+  );
+}
+
+function drawGrid() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  for (let y = 0; y < gridHeight; y++) {
+    for (let x = 0; x < gridWidth; x++) {
+      ctx.fillStyle = typeColors[grid[y][x]];
+      ctx.fillRect(x * cellSize, y * cellSize, cellSize, cellSize);
+    }
+  }
+}
+
+function updateGrid() {
+  const newGrid = JSON.parse(JSON.stringify(grid));
+  for (let y = 0; y < gridHeight; y++) {
+    for (let x = 0; x < gridWidth; x++) {
+      const neighbors = [
+        grid[y][x-1], // left
+        grid[y][x+1], // right
+        grid[y-1] && grid[y-1][x], // top
+        grid[y+1] && grid[y+1][x] // bottom
+      ].filter(Boolean);
+      const currentType = grid[y][x];
+      neighbors.forEach(neighbor => {
+        if (types.indexOf(neighbor) > types.indexOf(currentType)) {
+          newGrid[y][x] = neighbor;
         }
+      });
+    }
+  }
+  grid = newGrid;
+  drawGrid();
+}
 
-        function updateDisplay() {
-            let currentTime = Date.now();
-            elapsedTime = Math.floor((currentTime - startTime) / 1000);
+function startSimulation() {
+  stopSimulation();
+  animationFrameId = setInterval(updateGrid, animationSpeed);
+}
 
-            document.getElementById('totalTime').innerText = `TOTAL MEETING TIME: ${formatTime(elapsedTime)}`;
-            document.getElementById('remainingTime').innerText = `REMAINING MEETING TIME: ${formatTime(totalMeetingTime - elapsedTime)}`;
+function stopSimulation() {
+  clearInterval(animationFrameId);
+}
 
-            document.querySelectorAll('.topic').forEach(topic => {
-                let topicTime = parseInt(topic.dataset.time);
-                let subTopics = topic.querySelectorAll('.subtopic');
+canvas.addEventListener('click', function(event) {
+  const rect = canvas.getBoundingClientRect();
+  const x = Math.floor((event.clientX - rect.left) / cellSize);
+  const y = Math.floor((event.clientY - rect.top) / cellSize);
+  grid[y][x] = types[(types.indexOf(grid[y][x]) + 1) % types.length];
+  drawGrid();
+});
 
-                if (subTopics.length === 0) {
-                    // Handle topics without subtopics
-                    let remainingTime = topicTime - elapsedTime;
-                    topic.querySelector('.title').className = remainingTime >= 0 ? 'green' : 'red';
-                    topic.querySelector('.title').innerText = `Topic: ${formatTime(topicTime)} -- ${formatTime(elapsedTime)} REMAINING: ${formatTime(remainingTime)}`;
-                } else {
-                    // Handle topics with subtopics
-                    subTopics.forEach(subtopic => {
-                        let subTopicTime = parseInt(subtopic.dataset.time);
-                        let remainingTime = subTopicTime - elapsedTime;
-                        let text = `-- ${formatTime(elapsedTime)} REMAINING: ${formatTime(remainingTime)}`;
-                        subtopic.querySelector('span').innerText = text;
-                        subtopic.querySelector('span').className = remainingTime >= 0 ? 'green' : 'red';
-                    });
-                }
-            });
-        }
+document.getElementById('speedControl').addEventListener('input', function(event) {
+  animationSpeed = parseInt(event.target.value);
+  document.getElementById('speedValue').textContent = animationSpeed;
+  if (animationFrameId) {
+    startSimulation();
+  }
+});
 
-        function endTopic(button) {
-            if (currentTopic) {
-                let topicTime = parseInt(currentTopic.dataset.time);
-                let remainingTime = topicTime - elapsedTime;
-                let text = `-- [${formatTime(elapsedTime)}][${formatTime(remainingTime)}]`;
-                currentTopic.querySelector('span').innerText = text;
-                currentTopic.querySelector('span').className = remainingTime >= 0 ? 'green' : 'red';
-                currentTopic.querySelector('button').disabled = true;
-            }
+document.getElementById('startButton').addEventListener('click', startSimulation);
+document.getElementById('stopButton').addEventListener('click', stopSimulation);
 
-            currentTopic = button.parentElement;
-            startTime = Date.now();
-            elapsedTime = 0;
-            currentTopic.classList.add('current');
-        }
-
-        setInterval(updateDisplay, 1000);
-    </script>
+window.onload = () => {
+  canvas.width = gridWidth * cellSize;
+  canvas.height = gridHeight * cellSize;
+  initializeGrid();
+  drawGrid();
+};
+</script>
 </body>
 </html>
